feat: Finalize multi-platform support and fix Vercel deployment
 - Isolate Cloudflare worker from Node.js code to prevent conflicts.

 - Separate Node.js server logic into server.js for local development.

 - Configure Vercel entrypoint to correctly handle the Express app.

 - Add .claude directory to .gitignore to prevent secret leaks.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Simple OpenAI API reverse proxy",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "deploy:cloudflare": "wrangler deploy",
     "dev:cloudflare": "wrangler dev"
   },
